# Matrix

./: CMakeLists.txt  Explosion.cpp  Explosion.h  Figure.cpp  Figure.h  Line.cpp  Line.h  LinkedList.h  List.h  Manager.cpp  Manager.h  Matrix.cpp  Matrix.sln  Matrix1.cpp  MyVector.cpp  MyVector.h  README.md  Symbol.cpp  Symbol.h  line.h  manager.h  symbol.h
Matrix/: Matrix.cpp  Matrix.vcxproj  gotoxy.h  line.h  manager.h  symbol.h
Matrix/x64/Debug/: Matrix.exe.recipe  Matrix.ilk  matrix.obj.enc  vc143.idb
Matrix/x64/Debug/Matrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Matrix.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
